Added generics for result transformers